Deleted some stuff that just create some problemas.
Add some configuration to the pax:provision.