@@ -50,7 +50,7 @@
                     <framework>equinox</framework>
                     <provision>
                         <param>--bootDelegation=javax.*,sun.*,com.sun.*</param>
-                        <param>--vmOptions=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5000 -Dbundles.configuration.location=../devconfs/${cob.conf}</param>
+                        <param>--vmOptions=-Xms256m -Xmx1g -Xss256k -Djava.awt.headless=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError -Delasticsearch -Dbundles.configuration.location=../devconfs/${cob.conf}</param>
                         <param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.6.2</param>
                         <param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.6.2</param>
                     </provision>
